@@ -53,7 +53,6 @@
 package org.openmdx.portal.servlet.loader;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
@@ -70,27 +69,26 @@ import javax.jdo.JDOHelper;
 import javax.jdo.PersistenceManager;
 import javax.jdo.PersistenceManagerFactory;
 import javax.jmi.reflect.RefObject;
+import javax.resource.ResourceException;
 import javax.resource.cci.MappedRecord;
 import javax.servlet.ServletContext;
 
-import org.openmdx.application.configuration.Configuration;
-import org.openmdx.application.dataprovider.cci.DataproviderRequestProcessor;
-import org.openmdx.application.dataprovider.cci.ServiceHeader;
-import org.openmdx.application.dataprovider.kernel.EmbeddedDataprovider_1;
-import org.openmdx.application.dataprovider.spi.Layer_1;
 import org.openmdx.application.xml.Importer;
 import org.openmdx.base.accessor.jmi.spi.EntityManagerFactory_1;
 import org.openmdx.base.accessor.rest.DataManagerFactory_1;
-import org.openmdx.base.exception.RuntimeServiceException;
+import org.openmdx.base.dataprovider.cci.DataproviderRequestProcessor;
+import org.openmdx.base.dataprovider.kernel.Dataprovider_2;
 import org.openmdx.base.exception.ServiceException;
 import org.openmdx.base.jmi1.Authority;
 import org.openmdx.base.mof.cci.Model_1_0;
 import org.openmdx.base.naming.Path;
 import org.openmdx.base.persistence.cci.ConfigurableProperty;
+import org.openmdx.base.resource.spi.Port;
+import org.openmdx.base.rest.cci.ObjectRecord;
+import org.openmdx.base.rest.cci.RestConnection;
 import org.openmdx.base.rest.spi.ConnectionFactoryAdapter;
 import org.openmdx.base.rest.spi.Object_2Facade;
 import org.openmdx.base.transaction.TransactionAttributeType;
-import org.openmdx.kernel.loading.Classes;
 import org.openmdx.kernel.log.SysLog;
 import org.openmdx.portal.servlet.PortalExtension_1_0;
 
@@ -129,111 +127,53 @@ public class UiLoader
         return uiPkg;
     }
     
-    //-------------------------------------------------------------------------
-    protected static class Dataprovider extends Layer_1 {
-
-        public Dataprovider(
-            List delegates
-        ) throws Exception {
-            super.activate(
-                (short)5, 
-                new Configuration(), 
-                (Layer_1)delegates.get(0)
-            );
-        }
-
-    }
-      
     /**
      * Constructs an in-memory ui repository
      */
-    protected static Layer_1 createUiRepository(
+    protected static Port<RestConnection> createUiRepository(
         Model_1_0 model
     ) throws ServiceException {
-        try {
-            Configuration configuration = new Configuration();
-            configuration.values("namespaceId").put(0, "ui");
-            configuration.values(
-                org.openmdx.application.dataprovider.layer.persistence.none.LayerConfigurationEntries.CLONE_REPLY
-            ).put(0, Boolean.FALSE);
-            Layer_1 persistencePlugin = Classes.<Layer_1>getApplicationClass(
-                org.openmdx.application.dataprovider.layer.persistence.none.InMemory_1.class.getName()
-            ).newInstance();
-            persistencePlugin.activate((short)0, configuration, null);
-            Layer_1 modelPlugin = Classes.<Layer_1>getApplicationClass(
-                org.openmdx.application.dataprovider.layer.model.Standard_1.class.getName()
-            ).newInstance();
-            modelPlugin.activate((short)1, configuration, persistencePlugin);
-            Layer_1 applicationPlugin = Classes.<Layer_1>getApplicationClass(
-                org.openmdx.ui1.layer.application.Ui_1.class.getName()
-            ).newInstance();
-            applicationPlugin.activate((short)2, configuration, modelPlugin);
-            Layer_1 typePlugin = Classes.<Layer_1>getApplicationClass(
-                org.openmdx.application.dataprovider.layer.type.Standard_1.class.getName()
-            ).newInstance();
-            typePlugin.activate((short)3, configuration, applicationPlugin);
-            Layer_1 interceptionPlugin = Classes.<Layer_1>getApplicationClass(
-                org.openmdx.application.dataprovider.layer.interception.Standard_1.class.getName()
-            ).newInstance();
-            Configuration interceptionConfiguration = new Configuration(configuration);
-            interceptionConfiguration.values("propagateSet").put(0, Boolean.TRUE);
-            interceptionPlugin.activate((short)4, interceptionConfiguration, typePlugin);
-            return new Dataprovider(
-                Arrays.asList(
-                    new Layer_1[]{
-                        interceptionPlugin,
-                        typePlugin,
-                        applicationPlugin,
-                        modelPlugin,
-                        persistencePlugin
-                    }
-                )
-            );
-        } catch(ServiceException e) {
-            throw e;
-        } catch(Exception e) {
-            throw new RuntimeServiceException(e);
-        }
+        return new Dataprovider_2(UI_DATAPROVIDER_CONFIGURATION_URI);
     }
-    
+
     //-------------------------------------------------------------------------
     public PersistenceManager getRepository(
     ) throws ServiceException {
-        if(this.pm == null) try {
-        	EmbeddedDataprovider_1 uiPort = new EmbeddedDataprovider_1();
-        	uiPort.setDelegate(this.uiRepository);
-        	ConnectionFactoryAdapter connectionFactoryAdapter = new ConnectionFactoryAdapter(
-                uiPort,
-            	false, // supportsLocalTransactionDemarcation
-            	TransactionAttributeType.NEVER
-            );
-        	PersistenceManagerFactory dataObjectManagerFactory = DataManagerFactory_1.getPersistenceManagerFactory(
-    			Collections.singletonMap(
-    				ConfigurableProperty.ConnectionFactory.qualifiedName(),
-    				connectionFactoryAdapter
-    			)
-    		);
-        	Map<String,Object> entityManagerConfiguration = new HashMap<String,Object>();
-        	entityManagerConfiguration.put(
-            	ConfigurableProperty.ConnectionFactory.qualifiedName(),
-            	dataObjectManagerFactory
-            );
-            entityManagerConfiguration.put(
-            	ConfigurableProperty.PersistenceManagerFactoryClass.qualifiedName(),
-            	EntityManagerFactory_1.class.getName()
-            );        	
-            this.pm = JDOHelper.getPersistenceManagerFactory(
-            	entityManagerConfiguration
-            ).getPersistenceManager(
-            	null, // userName
-            	null // password
-            );
-        } catch (Exception exception) {
-            throw new ServiceException(exception);
+        if(this.pm == null) {
+        	try {
+	        	ConnectionFactoryAdapter connectionFactoryAdapter = new ConnectionFactoryAdapter(
+	                this.uiRepository,
+	            	false, // supportsLocalTransactionDemarcation
+	            	TransactionAttributeType.NEVER
+	            );
+	        	PersistenceManagerFactory dataObjectManagerFactory = DataManagerFactory_1.getPersistenceManagerFactory(
+	    			Collections.singletonMap(
+	    				ConfigurableProperty.ConnectionFactory.qualifiedName(),
+	    				connectionFactoryAdapter
+	    			)
+	    		);
+	        	Map<String,Object> entityManagerConfiguration = new HashMap<String,Object>();
+	        	entityManagerConfiguration.put(
+	            	ConfigurableProperty.ConnectionFactory.qualifiedName(),
+	            	dataObjectManagerFactory
+	            );
+	            entityManagerConfiguration.put(
+	            	ConfigurableProperty.PersistenceManagerFactoryClass.qualifiedName(),
+	            	EntityManagerFactory_1.class.getName()
+	            );        	
+	            this.pm = JDOHelper.getPersistenceManagerFactory(
+	            	entityManagerConfiguration
+	            ).getPersistenceManager(
+	            	null, // userName
+	            	null // password
+	            );
+        	} catch (Exception exception) {
+        		throw new ServiceException(exception);
+        	}
         }
         return this.pm;
     }
-        
+
     //-------------------------------------------------------------------------
     /**
      * load ui config in case the ui config resources have changed
@@ -246,12 +186,12 @@ public class UiLoader
     	System.out.println(messagePrefix + "Loading ui configuration...");
     	SysLog.info("Loading ui configuration");
         Map<String,Path> loadedUiSegments = new TreeMap<String,Path>();
-        List dirs = this.getDirectories("/WEB-INF/config/ui/");
+        List<String> dirs = this.getDirectories("/WEB-INF/config/ui/");
         for(
-            Iterator i = dirs.iterator(); 
+            Iterator<String> i = dirs.iterator(); 
             i.hasNext(); 
         ) {
-            String dir = (String)i.next();        
+            String dir = i.next();        
     
             // Check if any ui file was updated since last refresh
             long crc = 0;
@@ -265,13 +205,13 @@ public class UiLoader
             }
             if(
               (this.uiCRC.get(dir) == null) || 
-              (((Long)this.uiCRC.get(dir)).longValue() != crc)
+              ((this.uiCRC.get(dir)).longValue() != crc)
             ) {
-              Map<Path,MappedRecord> mergedUiElementDefs = new LinkedHashMap<Path,MappedRecord>();
+              Map<Path,ObjectRecord> mergedUiElementDefs = new LinkedHashMap<Path,ObjectRecord>();
               int fallbackLocaleIndex = 0;
               for(int j = 0; j < locale.length; j++) {
                 fallbackLocaleIndex = 0;
-                Set uiResources = null;
+                Set<String> uiResources = null;
                 if(locale[j] != null) {
                     String uiResourcesPath = dir + locale[j];
                     uiResources = context.getResourcePaths(uiResourcesPath);
@@ -290,12 +230,12 @@ public class UiLoader
                         SysLog.info(locale[j] + " not found. Fallback to " + locale[fallbackLocaleIndex]);
                     } 
                     else {
-                    	uiResources = new TreeSet(uiResources);
+                    	uiResources = new TreeSet<String>(uiResources);
                     }
                 }
                 try {
                   if(uiResources == null) {
-                      uiResources = new TreeSet();
+                      uiResources = new TreeSet<String>();
                       uiResources.add("./"); // empty dir
                   }
                   else {
@@ -303,11 +243,11 @@ public class UiLoader
                       SysLog.info("Loading " + uiResources.size() + " files for locale " + locale[j]);
                   }                  
                   for(
-                      Iterator k = uiResources.iterator(); 
+                      Iterator<String> k = uiResources.iterator(); 
                       k.hasNext(); 
                   ) {        
-                      Map<Path,MappedRecord> uiElementDefs = new LinkedHashMap<Path,MappedRecord>();
-                      String path = (String)k.next();
+                      Map<Path,ObjectRecord> uiElementDefs = new LinkedHashMap<Path,ObjectRecord>();
+                      String path = k.next();
                       if(!path.endsWith("/")) {
                     	  SysLog.detail("Loading", path);
                           try {
@@ -329,7 +269,7 @@ public class UiLoader
                     	  );
                       }
                       else {
-	                      for(Entry<Path,MappedRecord> e: mergedUiElementDefs.entrySet()) {
+	                      for(Entry<Path,ObjectRecord> e: mergedUiElementDefs.entrySet()) {
                               MappedRecord mergedUiElementDef = e.getValue();   
 	                    	  MappedRecord mergedUiElementDefValue = Object_2Facade.getValue(mergedUiElementDef);
 	                          // merge entry
@@ -422,66 +362,65 @@ public class UiLoader
               try {
                   String[] segmentName = this.getSegmentName(dir);
                   DataproviderRequestProcessor store = new DataproviderRequestProcessor(
-                      new ServiceHeader(),
+                	  Collections.<String>emptyList(),
                       this.uiRepository
                   );
                   // Assert existence of provider
                   try {
-                	  MappedRecord uiProvider = Object_2Facade.newInstance(
+                	  ObjectRecord uiProvider = Object_2Facade.newInstance(
                 		  this.providerPath,
                 		  "org:openmdx:base:Provider"
                 	  ).getDelegate();
                 	  store.addCreateRequest(uiProvider);
-                  }
-                  catch(Exception e) {}
+                  } catch(Exception e) {}
                   // Remove existing ui config
                   Path uiSegmentPath = this.providerPath.getDescendant("segment", segmentName[segmentName.length-1]);
                   try {
                 	  store.addRemoveRequest(uiSegmentPath);
-                  }
-                  catch(Exception e) {}
+                  }catch(Exception e) {}
                   // Re-create segment
                   try {
-                	  MappedRecord uiSegment = Object_2Facade.newInstance(
+                	  ObjectRecord uiSegment = Object_2Facade.newInstance(
                 		  uiSegmentPath,
                 		  "org:openmdx:ui1:Segment"
                 	  ).getDelegate();
                 	  store.addCreateRequest(uiSegment);
-                  }
-                  catch(Exception e) {}
+                  } catch(Exception e) {}
                   // Store ui elements
                   System.out.println(messagePrefix + "Storing " + mergedUiElementDefs.size() + " ui elements for segment " + uiSegmentPath);
                   SysLog.info("Storing " + mergedUiElementDefs.size() + " ui elements for segment " + uiSegmentPath);
                   store.beginBatch();
-                  for(Iterator<MappedRecord> j = mergedUiElementDefs.values().iterator(); j.hasNext(); ) {
-                      MappedRecord uiElement = j.next();
+                  for(Iterator<ObjectRecord> j = mergedUiElementDefs.values().iterator(); j.hasNext(); ) {
+                	  ObjectRecord uiElement = j.next();
                       store.addCreateRequest(
                           uiElement
                       );
                   }
-                  store.endBatch();            
+                  store.endBatch();
                   loadedUiSegments.put(
                       segmentName[0],
                       this.providerPath.getDescendant("segment", segmentName[segmentName.length-1])
                   );
-              }
-              catch(ServiceException e) {
+              } catch(ResourceException e) {
             	  SysLog.error("can not create ui config", e.getMessage());
-              }              
+              }
               this.uiCRC.put(
                   dir,
-                  new Long(crc)
+                  Long.valueOf(crc)
               );
           }
-        }    
+        }
     	System.out.println(messagePrefix + "Done (" + loadedUiSegments.size() + " segments)");
     	SysLog.info("Done", loadedUiSegments.size());        
         return new ArrayList<Path>(loadedUiSegments.values());
     }
 
     //-------------------------------------------------------------------------
-    private Map uiCRC = new HashMap();
-    private final Layer_1 uiRepository;
+	private static final String UI_DATAPROVIDER_CONFIGURATION_URI = 
+		"xri://+resource/org/openmdx/ui1/ui-dataprovider.properties";
+	
+    private final Map<String,Long> uiCRC = new HashMap<String,Long>();
+    private final Port<RestConnection> uiRepository;
     private transient PersistenceManager pm = null;
     private final Path providerPath;
 }
